TOPページに、ナビとロゴ画像を表示させました。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -1,4 +1,4 @@
-{% load static %}<!-- staticフォルダにあるファイルを読み込む -->
+{% load static %}
 <!doctype html>
 <html lang="ja">
     <head>
@@ -9,7 +9,22 @@
     </head>
 
     <body>
-        <h1>Taishiのホームページ</h1>
+        <!-- ヘッダー -->
+        <header class="page-header wrapper">
+            <h1><a href="{% url goto %}"><img class="logo" src="{% static 'pages/images/logo.png' %}" alt="logoの画像"></a></h1>
+            <!-- ナビ -->
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="#about">自己紹介</a></li>
+                    <li><a href="#works">制作物</a></li>
+                    <li><a href="#contact">問い合わせ</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="home-content wrapper">
+            <h2 class="page-title">ようこそ、私のホームページへ</h2>
+        </div>
     </body>
 
 </html>
