--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -3,8 +3,12 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{title}}</title>
         <meta name="description" content="Taishiのポートフォリオサイトです。">
+        <!-- Bootstrap css -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- 自作のcss -->
         <link rel="stylesheet" href="{% static 'pages/css/style.css' %}">
     </head>
 
@@ -21,10 +25,23 @@
                 </ul>
             </nav>
         </header>
-
-        <div class="home-content wrapper">
-            <h2 class="page-title">ようこそ、私のホームページへ</h2>
+    
+        <!-- jumbotron→横幅全体に広がる大きなセクションを作る -->
+        <div class="jumbotron jumbotron-fluid mb-0">
+            <!--背景用の動画ファイル-->
+            <video id="bg-video" autoplay loop muted>
+                <source src="{% static 'pages/movies/background.mp4' %}" type="video/mp4">
+                 <!-- 動画ファイルがロードできなかった場合に表示するメッセージ -->
+                 Your browser does not support the video tag.
+            </video>
+            <div class="home-content wrapper">
+                <h2 class="page-title">ようこそ、私のホームページへ</h2>
+            </div>
         </div>
+        
+        
+        <!-- Bootstrap JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 
 </html>
