ヘッダーを画面横幅いっぱいに表示するため、wrapperをheaderから外しました。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- ヘッダー -->
-        <header class="page-header wrapper">
+        <header class="page-header">
             <h1><a href="{% url goto %}"><img class="logo" src="{% static 'pages/images/logo.png' %}" alt="logoの画像"></a></h1>
             <!-- ナビ -->
             <nav>
