--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -18,7 +18,6 @@ img {
     justify-content: space-between;
     background: rgba(255, 255, 255, 0.2); /* 半透明の背景色を指定 */
     padding: 10px;
-    border-radius: 10px; /* 少し丸みをつける（オプション） */
 }
 .logo {
     width: 50px;
@@ -47,6 +46,7 @@ img {
 .home-content {
     text-align: center;
     margin-top: 10%;
+    color: white;
 }
 .page-title {
     font-size: 4rem;
