--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -8,6 +8,8 @@
         <meta name="description" content="Taishiのポートフォリオサイトです。">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- jQuery CDN -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>        
         <!-- 自作のcss -->
         <link rel="stylesheet" href="{% static 'pages/css/style.css' %}">
     </head>
@@ -27,21 +29,29 @@
         </header>
     
         <!-- jumbotron→横幅全体に広がる大きなセクションを作る -->
-        <div class="jumbotron jumbotron-fluid mb-0">
+        <section class="jumbotron jumbotron-fluid mb-0">
             <!--背景用の動画ファイル-->
             <video id="bg-video" autoplay loop muted>
                 <source src="{% static 'pages/movies/background.mp4' %}" type="video/mp4">
                  <!-- 動画ファイルがロードできなかった場合に表示するメッセージ -->
                  Your browser does not support the video tag.
             </video>
-            <div class="home-content wrapper">
+            <div class="home-content wrapper scroll_left">
                 <h2 class="page-title">ようこそ、私のホームページへ</h2>
             </div>
-        </div>
-        
+        </section>
+
+        <section class="additional-content">
+            <div class="scroll_up">
+                <h2 class="animate top-wrapper-txt">
+                    <span>こ</span><span>の</span><span>W</span><span>E</span><span>B</span><span>サ</span><span>イ</span><span>ト</span><span>は</span><span>、</span>
+                </h2>
+            </div>                             
+        </section>
         
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="{% static 'pages/js/script.js' %}"></script>
     </body>
 
 </html>
