--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -79,74 +79,49 @@ img {
 /* テキストが大から小へと流れるように表示されるアニメーションです */
 .animate {
     font-size: 25px;
-    font-family:"Times New Roman", 游明朝, YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho Pro", serif;
-  }
-  .animate span {
+    font-family: "Times New Roman", 游明朝, YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho Pro", serif;
+}
+
+/* アニメーションが開始されたとき */
+.animate.on span {
     display: inline-block;
-  }
-  
-  .animate span:nth-of-type(2) {
-    animation-delay: .05s;
-  }
-  .animate span:nth-of-type(3) {
-    animation-delay: .1s;
-  }
-  .animate span:nth-of-type(4) {
-    animation-delay: .15s;
-  }
-  .animate span:nth-of-type(5) {
-    animation-delay: .2s;
-  }
-  .animate span:nth-of-type(6) {
-    animation-delay: .25s;
-  }
-  .animate span:nth-of-type(7) {
-    animation-delay: .3s;
-  }
-  .animate span:nth-of-type(8) {
-    animation-delay: .35s;
-  }
-  .animate span:nth-of-type(9) {
-    animation-delay: .4s;
-  }
-  .animate span:nth-of-type(10) {
-    animation-delay: .45s;
-  }
-  .animate span:nth-of-type(11) {
-    animation-delay: .5s;
-  }
-  .animate span:nth-of-type(12) {
-    animation-delay: .55s;
-  }
-  
-  .top-wrapper-txt span {
     opacity: 0;
     transform: translate(-150px, 0) scale(.3);
     animation: leftRight .5s forwards;
-  }
-  
-  
-  @keyframes leftRight {
+}
+
+.animate.on span:nth-of-type(2) { animation-delay: .05s; }
+.animate.on span:nth-of-type(3) { animation-delay: .1s; }
+.animate.on span:nth-of-type(4) { animation-delay: .15s; }
+.animate.on span:nth-of-type(5) { animation-delay: .2s; }
+.animate.on span:nth-of-type(6) { animation-delay: .25s; }
+.animate.on span:nth-of-type(7) { animation-delay: .3s; }
+.animate.on span:nth-of-type(8) { animation-delay: .35s; }
+.animate.on span:nth-of-type(9) { animation-delay: .4s; }
+.animate.on span:nth-of-type(10) { animation-delay: .45s; }
+.animate.on span:nth-of-type(11) { animation-delay: .5s; }
+.animate.on span:nth-of-type(12) { animation-delay: .55s; }
+
+/* キーフレームアニメーション */
+@keyframes leftRight {
     40% {
-      transform: translate(50px, 0) scale(.8);
-      opacity: 1;
-      color: #fff;
+        transform: translate(50px, 0) scale(.8);
+        opacity: 1;
+        color: #fff;
     }
-  
     60% {
-      color: #fff;
+        color: #fff;
     }
-  
     80% {
-      transform: translate(0) scale(3);
-      opacity: 0;
+        transform: translate(0) scale(3);
+        opacity: 0;
     }
-  
     100% {
-      transform: translate(0) scale(1);
-      opacity: 1;
+        transform: translate(0) scale(1);
+        opacity: 1;
     }
-  }
+}
+
 
 
   /*----------------------------
