アニメーションの修正を行いました。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -44,7 +44,12 @@
         <section class="additional-content">
             <h2 class="animate top-wrapper-txt">
                 <span>こ</span><span>の</span><span>W</span><span>E</span><span>B</span><span>サ</span><span>イ</span><span>ト</span><span>は</span><span>、</span>
+                <br>
+                <span>す</span><span>げ</span><span>え</span><span>！</span><span>！</span><span>と</span><span>言</span><span>わ</span><span>れ</span><span>た</span><span>い</span>
+                <span>。。</span><span>を</span><span>テ</span><span>ー</span><span>マ</span><span>に</span><span>作</span><span>ら</span><span>れ</span><span>た</span>
+                <span>イ</span><span>キ</span><span>リ</span><span>サ</span><span>イ</span><span>ト</span><span>で</span><span>す</span><span>。</span>
             </h2>   
+
         </section>
         
         <!-- Bootstrap JavaScript -->
