--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -90,18 +90,50 @@ img {
     transform: translate(-150px, 0) scale(.3);
     animation: leftRight .5s forwards;
 }
+.animate.on span:nth-of-type(2) { animation-delay: 0.05s; }
+.animate.on span:nth-of-type(3) { animation-delay: 0.1s; }
+.animate.on span:nth-of-type(4) { animation-delay: 0.15s; }
+.animate.on span:nth-of-type(5) { animation-delay: 0.2s; }
+.animate.on span:nth-of-type(6) { animation-delay: 0.25s; }
+.animate.on span:nth-of-type(7) { animation-delay: 0.3s; }
+.animate.on span:nth-of-type(8) { animation-delay: 0.35s; }
+.animate.on span:nth-of-type(9) { animation-delay: 0.4s; }
+.animate.on span:nth-of-type(10) { animation-delay: 0.45s; }
+.animate.on span:nth-of-type(11) { animation-delay: 0.5s; }
+.animate.on span:nth-of-type(12) { animation-delay: 0.55s; }
+.animate.on span:nth-of-type(13) { animation-delay: 0.6s; }
+.animate.on span:nth-of-type(14) { animation-delay: 0.65s; }
+.animate.on span:nth-of-type(15) { animation-delay: 0.7s; }
+.animate.on span:nth-of-type(16) { animation-delay: 0.75s; }
+.animate.on span:nth-of-type(17) { animation-delay: 0.8s; }
+.animate.on span:nth-of-type(18) { animation-delay: 0.85s; }
+.animate.on span:nth-of-type(19) { animation-delay: 0.9s; }
+.animate.on span:nth-of-type(20) { animation-delay: 0.95s; }
+.animate.on span:nth-of-type(21) { animation-delay: 1.0s; }
+.animate.on span:nth-of-type(22) { animation-delay: 1.05s; }
+.animate.on span:nth-of-type(23) { animation-delay: 1.1s; }
+.animate.on span:nth-of-type(24) { animation-delay: 1.15s; }
+.animate.on span:nth-of-type(25) { animation-delay: 1.2s; }
+.animate.on span:nth-of-type(26) { animation-delay: 1.25s; }
+.animate.on span:nth-of-type(27) { animation-delay: 1.3s; }
+.animate.on span:nth-of-type(28) { animation-delay: 1.35s; }
+.animate.on span:nth-of-type(29) { animation-delay: 1.4s; }
+.animate.on span:nth-of-type(30) { animation-delay: 1.45s; }
+.animate.on span:nth-of-type(31) { animation-delay: 1.5s; }
+.animate.on span:nth-of-type(32) { animation-delay: 1.55s; }
+.animate.on span:nth-of-type(33) { animation-delay: 1.6s; }
+.animate.on span:nth-of-type(34) { animation-delay: 1.65s; }
+.animate.on span:nth-of-type(35) { animation-delay: 1.7s; }
+.animate.on span:nth-of-type(36) { animation-delay: 1.75s; }
+.animate.on span:nth-of-type(37) { animation-delay: 1.8s; }
+.animate.on span:nth-of-type(38) { animation-delay: 1.85s; }
+.animate.on span:nth-of-type(39) { animation-delay: 1.9s; }
+.animate.on span:nth-of-type(40) { animation-delay: 1.95s; }
+.animate.on span:nth-of-type(41) { animation-delay: 2.0s; }
+.animate.on span:nth-of-type(42) { animation-delay: 2.05s; }
+.animate.on span:nth-of-type(43) { animation-delay: 2.1s; }
+.animate.on span:nth-of-type(44) { animation-delay: 2.15s; }
 
-.animate.on span:nth-of-type(2) { animation-delay: .05s; }
-.animate.on span:nth-of-type(3) { animation-delay: .1s; }
-.animate.on span:nth-of-type(4) { animation-delay: .15s; }
-.animate.on span:nth-of-type(5) { animation-delay: .2s; }
-.animate.on span:nth-of-type(6) { animation-delay: .25s; }
-.animate.on span:nth-of-type(7) { animation-delay: .3s; }
-.animate.on span:nth-of-type(8) { animation-delay: .35s; }
-.animate.on span:nth-of-type(9) { animation-delay: .4s; }
-.animate.on span:nth-of-type(10) { animation-delay: .45s; }
-.animate.on span:nth-of-type(11) { animation-delay: .5s; }
-.animate.on span:nth-of-type(12) { animation-delay: .55s; }
 
 /* キーフレームアニメーション */
 @keyframes leftRight {
@@ -116,6 +148,7 @@ img {
     80% {
         transform: translate(0) scale(3);
         opacity: 0;
+
     }
     100% {
         transform: translate(0) scale(1);
