--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -37,7 +37,8 @@
                  Your browser does not support the video tag.
             </video>
             <div class="home-content wrapper scroll_left">
-                <h2 class="page-title">ようこそ、私のホームページへ</h2>
+                <h2 class="page-title extinction">ようこそ、私のホームページへ</h2>
+                <h2 class="page-title welcome hidden">Step into My Site</h2>
             </div>
         </section>
 
