--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -52,8 +52,29 @@ img {
     font-size: 4rem;
     text-transform: uppercase;
     font-weight: normal;
-    transition: 0.8s ease-in-out;
     transform: translateX(-30px);
+}
+
+/* セクション全体のスタイル */
+.content-section {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+/* タイトルのスタイル */
+.section-title {
+    font-weight: bold;
+    margin-bottom: 20px;
+    line-height: 1.2;
+    color: #fff;
+}
+
+/* テキストのスタイル */
+.section-text {
+    font-size: 1.3rem;
+    line-height: 1.8;
+    font-family: 'Noto Sans JP', sans-serif; /* 日本語のフォントを指定 */
+    color: #dcdcdc;
 }
 
 /* 背景動画 */
@@ -76,93 +97,15 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
 }
 
-/* テキストが大から小へと流れるように表示されるアニメーションです */
-.animate span{
-    font-size: 25px;
-    font-family: "Times New Roman", 游明朝, YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho Pro", serif;
-    opacity: 0;
-}
-
-/* アニメーションが開始されたとき */
-.animate.on span {
-    display: inline-block;
-    opacity: 1;
-    transform: translate(-150px, 0) scale(.3);
-    animation: leftRight .5s forwards;
-}
-.animate.on span:nth-of-type(2) { animation-delay: 0.05s; }
-.animate.on span:nth-of-type(3) { animation-delay: 0.1s; }
-.animate.on span:nth-of-type(4) { animation-delay: 0.15s; }
-.animate.on span:nth-of-type(5) { animation-delay: 0.2s; }
-.animate.on span:nth-of-type(6) { animation-delay: 0.25s; }
-.animate.on span:nth-of-type(7) { animation-delay: 0.3s; }
-.animate.on span:nth-of-type(8) { animation-delay: 0.35s; }
-.animate.on span:nth-of-type(9) { animation-delay: 0.4s; }
-.animate.on span:nth-of-type(10) { animation-delay: 0.45s; }
-.animate.on span:nth-of-type(11) { animation-delay: 0.5s; }
-.animate.on span:nth-of-type(12) { animation-delay: 0.55s; }
-.animate.on span:nth-of-type(13) { animation-delay: 0.6s; }
-.animate.on span:nth-of-type(14) { animation-delay: 0.65s; }
-.animate.on span:nth-of-type(15) { animation-delay: 0.7s; }
-.animate.on span:nth-of-type(16) { animation-delay: 0.75s; }
-.animate.on span:nth-of-type(17) { animation-delay: 0.8s; }
-.animate.on span:nth-of-type(18) { animation-delay: 0.85s; }
-.animate.on span:nth-of-type(19) { animation-delay: 0.9s; }
-.animate.on span:nth-of-type(20) { animation-delay: 0.95s; }
-.animate.on span:nth-of-type(21) { animation-delay: 1.0s; }
-.animate.on span:nth-of-type(22) { animation-delay: 1.05s; }
-.animate.on span:nth-of-type(23) { animation-delay: 1.1s; }
-.animate.on span:nth-of-type(24) { animation-delay: 1.15s; }
-.animate.on span:nth-of-type(25) { animation-delay: 1.2s; }
-.animate.on span:nth-of-type(26) { animation-delay: 1.25s; }
-.animate.on span:nth-of-type(27) { animation-delay: 1.3s; }
-.animate.on span:nth-of-type(28) { animation-delay: 1.35s; }
-.animate.on span:nth-of-type(29) { animation-delay: 1.4s; }
-.animate.on span:nth-of-type(30) { animation-delay: 1.45s; }
-.animate.on span:nth-of-type(31) { animation-delay: 1.5s; }
-.animate.on span:nth-of-type(32) { animation-delay: 1.55s; }
-.animate.on span:nth-of-type(33) { animation-delay: 1.6s; }
-.animate.on span:nth-of-type(34) { animation-delay: 1.65s; }
-.animate.on span:nth-of-type(35) { animation-delay: 1.7s; }
-.animate.on span:nth-of-type(36) { animation-delay: 1.75s; }
-.animate.on span:nth-of-type(37) { animation-delay: 1.8s; }
-.animate.on span:nth-of-type(38) { animation-delay: 1.85s; }
-.animate.on span:nth-of-type(39) { animation-delay: 1.9s; }
-.animate.on span:nth-of-type(40) { animation-delay: 1.95s; }
-.animate.on span:nth-of-type(41) { animation-delay: 2.0s; }
-.animate.on span:nth-of-type(42) { animation-delay: 2.05s; }
-.animate.on span:nth-of-type(43) { animation-delay: 2.1s; }
-.animate.on span:nth-of-type(44) { animation-delay: 2.15s; }
 
 
-/* キーフレームアニメーション */
-@keyframes leftRight {
-    40% {
-        transform: translate(50px, 0) scale(.8);
-        opacity: 1;
-        color: #fff;
-    }
-    60% {
-        color: #fff;
-    }
-    80% {
-        transform: translate(0) scale(3);
-        opacity: 0;
-
-    }
-    100% {
-        transform: translate(0) scale(1);
-        opacity: 1;
-    }
-}
-
+/*---------------------------- アニメーション ----------------------------*/
 /* 初期状態のスタイル */
 .hidden {
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
 }
 .visible {
     opacity: 1;
@@ -173,7 +116,7 @@ img {
 ----------------------------*/
 .extinction {
     opacity: 1.0;
-    transition: opacity 0.5s ease-in-out; /* フェードアウトの速度と効果 */
+    transition: opacity 0.2s ease-in-out; /* フェードアウトの速度と効果 */
 }
  .extinction.on {
     opacity: 0;
@@ -218,3 +161,4 @@ scroll_up ｜下から上へ出現
       opacity: 1.0;
       transform: translateX(0);
   }
+
