--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -38,19 +38,21 @@
             </video>
             <div class="home-content wrapper scroll_left">
                 <h2 class="page-title extinction">ようこそ、私のホームページへ</h2>
-                <h2 class="page-title welcome hidden">Step into My Site</h2>
+                <h2 class="page-title appearance hidden">Step into My Site</h2>
             </div>
         </section>
 
         <section class="additional-content">
-            <h2 class="animate top-wrapper-txt">
-                <span>こ</span><span>の</span><span>W</span><span>E</span><span>B</span><span>サ</span><span>イ</span><span>ト</span><span>は</span><span>、</span>
+            <div class="content-section scroll_up">
+                <h2 class="section-content">Helllo! There!<h3>
                 <br>
-                <span>す</span><span>げ</span><span>え</span><span>！</span><span>！</span><span>と</span><span>言</span><span>わ</span><span>れ</span><span>た</span><span>い</span>
-                <span>。。</span><span>を</span><span>テ</span><span>ー</span><span>マ</span><span>に</span><span>作</span><span>ら</span><span>れ</span><span>た</span>
-                <span>イ</span><span>キ</span><span>リ</span><span>サ</span><span>イ</span><span>ト</span><span>で</span><span>す</span><span>。</span>
-            </h2>   
-
+                <p class="section-text">
+                    このWebサイトは、私、Taishiのポートフォリオサイトです！<br>
+                    正直、「自分、地元では"路上の伝説"って呼ばれてました！」
+                    みたいなおもろそうな人生送ってません。。平凡of平凡の人生歩んでるので、面白味のかけらもないWebサイトです。<br>
+                    ただ、Webサイト作ってみたい！という欲望だけで作りました。
+                    なので、謎の動画やアニメーションがふんだんに利用されていますが、ご了承ください。
+                </p>                   
         </section>
         
         <!-- Bootstrap JavaScript -->
