コンテンツを加えました。

--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-
+/* ===========================================
+ * head
+ * ======================================== */
 html {
     font-size: 100%;
 }
@@ -12,7 +14,10 @@ img {
     padding: 0 4%;
 }
 
-/* HEADER */
+
+/* ===========================================
+ * header
+ * ======================================== */
 .page-header {
     display: flex;
     justify-content: space-between;
@@ -41,8 +46,9 @@ img {
     color: #0bd;
 }
 
-
-/* HOME */
+/* ===========================================
+ * body
+ * ======================================== */
 .home-content {
     text-align: center;
     margin-top: 10%;
@@ -74,7 +80,7 @@ img {
     font-size: 1.3rem;
     line-height: 1.8;
     font-family: 'Noto Sans JP', sans-serif; /* 日本語のフォントを指定 */
-    color: #dcdcdc;
+    color: #ffffff;
 }
 
 /* 背景動画 */
@@ -89,8 +95,14 @@ img {
     filter: brightness(50%); /* 明るさを50%に設定して暗くする */
 }
 
+/* 背景 */
+.original-gradient {
+    height: 200px;
+    width: 100%;
+    background-image: linear-gradient(270deg, rgba(57, 101, 150, 1), rgba(233, 240, 250, 1));
+  }
+
 .additional-content {
-    background-color: #467cb2; /* 背景色を設定 */
     color: #ffffff; /* テキストの色 */
     min-height: 100vh; /* 画面全体の高さを確保 */
     margin-top: 60vh;
@@ -98,36 +110,39 @@ img {
     align-items: center;
     justify-content: center;
 }
+.additional-content-2 {
+    color: #ffffff; /* テキストの色 */
+    min-height: 100vh; /* 画面全体の高さを確保 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
-
-/*---------------------------- アニメーション ----------------------------*/
-/* 初期状態のスタイル */
+/* ===========================================
+ * animation : 要素のアニメーション関係
+ * ======================================== */
+/* 要素の出現 */
 .hidden {
     opacity: 0;
-    transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.8s ease-in-out;
 }
 .visible {
     opacity: 1;
 }
 
-/*----------------------------
- extinction｜消滅
-----------------------------*/
+/* extinction|要素の消滅 */
 .extinction {
     opacity: 1.0;
-    transition: opacity 0.2s ease-in-out; /* フェードアウトの速度と効果 */
+    transition: opacity 0.5s ease-in-out; /* フェードアウトの速度と効果 */
 }
  .extinction.on {
     opacity: 0;
  }
 
-
-  /*----------------------------
-scroll_up ｜下から上へ出現
-----------------------------*/
+/* scroll_up |上から出現 */
 .scroll_up {
-    transition: 0.8s ease-in-out;
+    transition: 0.5s ease-in-out;
     transform: translateY(30px);
     opacity: 0;
   }
@@ -136,9 +151,7 @@ scroll_up ｜下から上へ出現
     opacity: 1.0;
   }
   
-  /*----------------------------
-  scroll_left ｜左から出現
-  ----------------------------*/
+/* scroll_left |左から出現 */
   .scroll_left {
       transition: 0.8s ease-in-out;
       transform: translateX(-30px);
@@ -148,10 +161,8 @@ scroll_up ｜下から上へ出現
       opacity: 1.0;
       transform: translateX(0);
   }
-  
-  /*----------------------------
-  scroll_right ｜右から出現
-  ----------------------------*/
+
+  /* scroll_right |右から出現 */
   .scroll_right {
       transition: 0.8s ease-in-out;
       transform: translateX(30px);
@@ -162,3 +173,51 @@ scroll_up ｜下から上へ出現
       transform: translateX(0);
   }
 
+/* ===========================================
+ * bottun : ボタンのデザイン
+ * ======================================== */
+ .button a {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    border-radius: 9999px;
+    max-width: 250px;
+    padding: 10px 25px;
+    font-family: "Noto Sans Japanese";
+    color: #fdffe6;
+    line-height: 1.8;
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
+    font-weight: 500;
+    background: linear-gradient(270deg, #3bade3 0%, #5d78ff 25%, #59f2e0 51%, hsl(127, 88%, 77%) 100%);
+    background-position: 1% 50%;
+    background-size: 200% auto;
+    transition: all 0.3s ease-out;
+}
+.button a:hover {
+    color: #fff;
+    background-position: 99% 50%;
+    transform: scale(1.05);
+    /*ボックスの影*/  
+    box-shadow: 0 15px 15px rgba(87,111,230,0.4);
+}
+.button a:after {
+    content: '';
+    width: 5px;
+    height: 5px;
+    border-top: 3px solid #fff;
+    border-right: 3px solid #fff;
+    transform: rotate(45deg) translateY(-50%);
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    border-radius: 1px;
+    transition: 0.3s ease-in-out;
+}
+body{
+    vertical-align:middle; 
+    padding: 50px 0;
+    text-align: center;
+}
