--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
 
-        <section class="additional-content">
+        <section class="additional-content original-gradient">
             <div class="content-section scroll_up">
                 <h2 class="section-content">Helllo! There!<h3>
                 <br>
@@ -50,10 +50,18 @@
                     このWebサイトは、私、Taishiのポートフォリオサイトです！<br>
                     正直、「自分、地元では"路上の伝説"って呼ばれてました！」
                     みたいなおもろそうな人生送ってません。。平凡of平凡の人生歩んでるので、面白味のかけらもないWebサイトです。<br>
-                    ただ、Webサイト作ってみたい！という欲望だけで作りました。
+                    ただ、Webサイトを作ってみたい！という欲望だけで作りました。
                     なので、謎の動画やアニメーションがふんだんに利用されていますが、ご了承ください。
                 </p>                   
         </section>
+
+        <section class="additional-content-2 original-gradient">
+            <div class="button">
+                <a href="#">ボタンをクリック</a>
+              </div>
+        </section>
+
+
         
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
