containaerクラスを追加しました。

--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -55,10 +55,16 @@
                 </p>                   
         </section>
 
-        <section class="additional-content-2 original-gradient">
+        <section class="additional-content-2 original-gradient container">
             <div class="button">
                 <a href="#">ボタンをクリック</a>
-              </div>
+            </div>
+            <div class="button">
+                <a href="#">ボタンをクリック</a>
+            </div>
+            <div class="button">
+                <a href="#">ボタンをクリック</a>
+            </div>
         </section>
 
 
