--- a/mysite/pages/templates/pages/index.html
+++ b/mysite/pages/templates/pages/index.html
@@ -28,14 +28,15 @@
             みたいなおもろそうな人生送ってません。。平凡of平凡の人生歩んでるので、面白味のかけらもないWebサイトです。<br>
             ただ、Webサイトを作ってみたい！という欲望だけで作りました。
             なので、謎の動画やアニメーションがふんだんに利用されていますが、ご了承ください。
-        </p>                   
+        </p>    
+    </div>               
 </section>
 
 <section class="additional-content-2 original-gradient">
-    <div class = "container">
+    <div class = "container scroll_up">
         <div class = "item">
             <div class="button">
-                <a href="#">自己紹介</a>
+                <a href="{% url intro_url %}">自己紹介</a>
             </div>
             <br>
             <p>自己紹介ページに飛びます。私の簡単な生い立ちや、現在やっていること、趣味や特技など適当に書いています。
