--- a/mysite/pages/templates/pages/base.html
+++ b/mysite/pages/templates/pages/base.html
@@ -17,7 +17,7 @@
     <body>
         <!-- ヘッダー -->
         <header class="page-header">
-            <h1><a href="{% url goto %}"><img class="logo" src="{% static 'pages/images/logo.png' %}" alt="logoの画像"></a></h1>
+            <h1><a href="{% url logo_url %}"><img class="logo" src="{% static 'pages/images/logo.png' %}" alt="logoの画像"></a></h1>
             <!-- ナビ -->
             <nav>
                 <ul class="main-nav">
