お問い合わせページを作りました。

--- a/mysite/pages/templates/pages/introduction.html
+++ b/mysite/pages/templates/pages/introduction.html
@@ -43,9 +43,9 @@
 </section>
 
 <section class="section-story original-gradient-story">
-    <h2>MY Story</h2>
+    <h2>My Story</h2>
     <h3>ー私の生涯ー</h3>
-    <ul class="scroll_lists">
+    <ul class="scroll_lists scroll_left">
         <li>
         <div class="period">⚫︎幼少期</div>
         <div class="story-summary">超かわいかった</div>
@@ -86,16 +86,6 @@
         </li>
     </ul>
   </section>
-
-
-
-
-
-
-
-
-
-
 
 
 
