forms.pyを作成し、お問い合わせページにフォームを表示しました。

--- a/mysite/pages/static/pages/css/style.css
+++ b/mysite/pages/static/pages/css/style.css
@@ -153,6 +153,22 @@ img {
     align-items: center;
     justify-content: center;
 }
+.additional-content-contact {
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* 上部に配置 */
+    align-items: center; /* 水平方向に中央揃え */
+    min-height: 100vh; /* 画面全体の高さ */
+    margin-top: 60vh; /* 必要なら削除、もしくは調整 */
+}
+
+.additional-content-contact h2 {
+    text-align: center;
+    color: rgb(38, 90, 122);
+    margin-bottom: 30px;
+    margin-top: 80px; /* 上に少し余白を持たせる */
+}
 
 /* ===========================================
  * Animation Styles
