work.htmlとの関係を追加しました。

--- a/mysite/pages/templates/pages/base.html
+++ b/mysite/pages/templates/pages/base.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul class="main-nav">
                     <li><a href="{% url 'intro' %}">自己紹介</a></li>
-                    <li><a href="#works">制作物</a></li>
+                    <li><a href="{% url 'work' %}">制作物</a></li>
                     <li><a href="{% url 'contact' %}">問い合わせ</a></li>
                 </ul>
             </nav>
