--- a/mysite/pages/templates/pages/base.html
+++ b/mysite/pages/templates/pages/base.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Taishiのホームページ{% endblock title %}</title>
         <meta name="description" content="Taishiのポートフォリオサイトです。">
+        <!-- ga.htmlファイルの読み込み-->
+        {% if GOOGLE_ANALYTICS_TRACKING_ID %}
+            {% include 'ga.html' %}
+        {% endif %}
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <!-- jQuery CDN -->
