--- a/mysite/pages/templates/pages/base.html
+++ b/mysite/pages/templates/pages/base.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Taishiのポートフォリオサイトです。">
         <!-- ga.htmlファイルの読み込み-->
         {% if GOOGLE_ANALYTICS_TRACKING_ID %}
-            {% include 'ga.html' %}
+            {% include 'pages/ga.html' %}
         {% endif %}
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
